@@ -79,6 +79,12 @@ rsvg_pixbuf_new_from_file_at_size (const char *filename,
 								   int         height,
 								   gboolean    keep_aspect_ratio,
 								   GError    **error);
+GdkPixbuf *
+rsvg_pixbuf_new_from_data_at_size (const char *data,
+								   int         width, 
+								   int         height,
+								   gboolean    keep_aspect_ratio,
+								   GError    **error);
 
 void rsvg_defs_drawable_draw (RsvgDefsDrawable * self, RsvgHandle *ctx, 
 							  int dominate);
