@@ -1,3 +1,11 @@
+2004-04-12  Dom Lachowicz <cinamod@hotmail.com>
+
+	* rsvg-shapes.c, rsvg-filter.c: Support data: images in filters
+	
+2004-04-12  Ross Burton  <ross@burtonini.com>
+
+	* rsvg-shapes.c: Use the correct rowstride when scaling images.
+
 2004-03-30  Caleb Moore <c.moore@student.unsw.edu.au>
 
 	* rsvg-paint-server.c: made currentColor work for gradients
